// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with collapse prop 1`] = `
<button
  className="sc-bwzfXH cfcumX"
/>
`;

exports[`renders correctly with disabled prop 1`] = `
<button
  className="sc-bwzfXH daTmrg"
  disabled={true}
/>
`;

exports[`renders correctly with expand prop 1`] = `
<button
  className="sc-bwzfXH cMXMRF"
/>
`;

exports[`renders correctly with hidden prop 1`] = `
<button
  className="sc-bwzfXH hhKQQc"
  hidden={true}
/>
`;

exports[`renders correctly with no props 1`] = `
<button
  className="sc-bwzfXH fAAHDl"
/>
`;

exports[`renders correctly with secondary prop 1`] = `
<button
  className="sc-bwzfXH cruFNd"
/>
`;

exports[`renders correctly with small prop 1`] = `
<button
  className="sc-bwzfXH clmsGj"
/>
`;
